--- a/front_build/index.html
+++ b/front_build/index.html
@@ -4,11 +4,17 @@
   <script>
     function testRequest() {
       console.log('start')
-      fetch('http://localhost:8471',
+      fetch('http://localhost:8471/connect',
       	{method: 'POST',
       	 headers: {'Content-Type': 'application/json'},
-      	  body: JSON.stringify({'id': '11', 'type': 'type1'})
+      	  body: JSON.stringify({'ip': '127.0.0.1', 'port': '4890'})
       	}).then((r)=>{console.log(r)})
+      	
+      fetch('http://localhost:8471/search',
+      	{method: 'POST',
+      	 headers: {'Content-Type': 'application/json'},
+      	  body: JSON.stringify({'name': 'abcd'})
+      	}).then((r)=>{r.json().then(j => console.log(j))})
     }
   </script>
 </head>
